cal-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-calculator-route
spec:
  parentRefs:
    - name: http-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /calculator
      backendRefs:
        - kind: Service
          name: calculator-1
          port: 8080
          weight: 50
        - kind: Service
          name: calculator-2
          port: 8090
          weight: 50
